# payclaw-skill

./: .gitignore  .npmrc  INSTALL.md  README.md  package-lock.json  package.json  payclaw.plugin.json
.github/workflows/: publish.yml
mcp/: README.md  package.json
mcp/src/: index.ts
openclaw-plugin/: README.md  package.json
openclaw-plugin/src/: index.ts
payclaw-ai/: README.md  package-lock.json  package.json  tsconfig.json
payclaw-ai/examples/: live_agent.ts  quickstart.ts
payclaw-ai/src/: client.ts  index.ts  tools.ts
payclaw-ai/test/: tools.test.ts
python/autogen-payclaw/: README.md  pyproject.toml
python/autogen-payclaw/autogen_payclaw/: __init__.py  client.py  tools.py
python/autogen-payclaw/examples/: assistant_agent.py  quickstart.py
python/autogen-payclaw/tests/: test_tools.py
python/crewai-payclaw/: README.md  pyproject.toml
python/crewai-payclaw/crewai_payclaw/: __init__.py  client.py  tools.py
python/crewai-payclaw/examples/: crew_treasurer.py  quickstart.py
python/crewai-payclaw/tests/: test_tools.py
python/langchain-payclaw/: README.md  pyproject.toml
python/langchain-payclaw/examples/: langgraph_agent.py  quickstart.py
python/langchain-payclaw/langchain_payclaw/: __init__.py  client.py  tools.py
python/langchain-payclaw/tests/: test_tools.py
python/llama-index-tools-payclaw/: README.md  pyproject.toml
python/llama-index-tools-payclaw/examples/: function_agent.py  quickstart.py
python/llama-index-tools-payclaw/llama_index/tools/payclaw/: __init__.py  client.py  tools.py
python/llama-index-tools-payclaw/tests/: test_tools.py
skills/balance/: SKILL.md
skills/history/: SKILL.md
skills/pay/: SKILL.md
src/: config.ts  index.ts  ledger.ts  wallet.ts
