[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "crewai-payclaw"
version = "0.1.0"
description = "PayClaw tools for CrewAI — give your agent crew a USDC wallet on Base it can actually spend. Gasless via Circle Paymaster."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Grip Labs", email = "hello@payclaw.me" }]
requires-python = ">=3.10"
keywords = [
  "crewai",
  "agents",
  "payments",
  "usdc",
  "base",
  "stablecoin",
  "paymaster",
  "erc-4337",
  "agentic",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "crewai>=0.70.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "respx>=0.21",
]

[project.urls]
Homepage = "https://payclaw.me"
Repository = "https://github.com/ONSARI/payclaw-skill"
Issues = "https://github.com/ONSARI/payclaw-skill/issues"
Documentation = "https://github.com/ONSARI/payclaw-skill/tree/main/python/crewai-payclaw"

[tool.hatch.build.targets.wheel]
packages = ["crewai_payclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
